- fix: Fixed cache problem - fix: Fixed log containers being too small on phone's landscape mode

--- a/static/static/css/session.css
+++ b/static/static/css/session.css
@@ -422,3 +422,9 @@ body.flash-red {
         font-size: 20vw;
     }
 }
+
+@media (orientation: landscape) and (max-height: 450px) {
+    .status-log {
+        min-height: 300px;
+    }
+}
